# agent-space

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.agent/: ARCHITECTURE.md  BOUNDARIES.md  COMMANDS.md  GLOSSARY.md  INDEX.md  ROADMAP.md  WORKING_TIPS.md  context-bundles.yaml
.agent/architecture/: AGENT_RUNTIME_AUTHORITY.md  ARTIFACTS.md  (+58 more)
.claude/: settings.json
backend/: Dockerfile  alembic.ini  pytest.ini
control-plane/: Dockerfile  package-lock.json  package.json  vitest.config.ts
core/: CLAUDE.md  README.md
deployer/: Dockerfile  README.md  deployer.py  protocol.py  test_deployer.py
docs/: ARCHITECTURE.md  BACKUP_AND_RESTORE.md  CAPABILITY_SYSTEM.md  CONTENT_PUBLICATIONS.md  DAILY_CAPTURE_REPORT.md  EVOLUTION_CORE.md  EVOLVER_INTEGRATION.md  FEDERATED_ACCESS_MODEL.md  FUTURE_ROADMAP.md  MEMORY_CONTEXT_ROADMAP.md  MEMORY_MODEL.md  MULTI_AGENT.md  ORCHESTRATION_UI_MANUAL_VERIFICATION.md  PERSONAL_MEMORY_GRANT.md  POLICY_AND_PRIVACY_BOUNDARIES.md  PUBLISH_PROJECTION.md  README.md  SANDBOX_POLICY.md  SELF_EVOLUTION.md  SOURCE_POINTER.md  SPACE_MODEL.md  TARGET_VIEW_MODEL.md  THREAT_MODEL.md  TOKEN_USAGE_METERING.md  TWO_PERSON_DOGFOODING_RC.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: lib.rs  main.rs
sandbox/: Dockerfile
scripts/: backup.sh  restore.sh  start.sh
server/: .gitignore  Dockerfile  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+3020 files in other folders)
