[package]
name = "agent-core-desktop"
version = "0.1.0"
description = "Agent Core Desktop"
authors = []
edition = "2021"

[lib]
name = "agent_core_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
